--- a/app/partner-casinos/page.module.css
+++ b/app/partner-casinos/page.module.css
@@ -363,7 +363,6 @@
 
 .brandsGrid > * {
   min-width: 0;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
